...
                        onPress={handleLogin}
                        disabled={loading || ghostLoading}
                    >
                        {loading ? (
                            <ActivityIndicator color={theme.colors.text} />
                        ) : (
                            <Text style={styles.loginButtonText}>Inloggen</Text>
                        )}
                    </TouchableOpacity>

                    <TouchableOpacity
                        style={styles.ghostButton}
                        onPress={handleGhostLogin}
...
